[gd_scene load_steps=12 format=3 uid="uid://bkxamkmh0oomm"]

[ext_resource type="Texture2D" uid="uid://cxuryokjriuck" path="res://Rabbit mock-Sheet.png" id="1_b77a1"]
[ext_resource type="Script" path="res://Player.gd" id="2_k1y2w"]
[ext_resource type="Script" path="res://Camera2D.gd" id="3_h76xm"]
[ext_resource type="Script" path="res://Coin.gd" id="3_vvdks"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2vpwf"]
texture = ExtResource("1_b77a1")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_140h6"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_2vpwf")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fnw0w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2tmu7"]
atlas = ExtResource("1_b77a1")
region = Rect2(32, 128, 32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iilue"]
size = Vector2(32, 32)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_tjx0s"]
load_path = "res://.godot/imported/Rabbit mock-Sheet.png-77891224a4ab21b3cc19d21a71ed22c0.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_7i24b"]
atlas = SubResource("CompressedTexture2D_tjx0s")
region = Rect2(96, 64, 32, 32)

[node name="Node2D" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(128, 127)
tile_set = SubResource("TileSet_140h6")
collision_animatable = true
collision_visibility_mode = 1
format = 2
layer_0/tile_data = PackedInt32Array(-262149, 65536, 3, -196613, 65536, 3, -131077, 65536, 3, -65541, 65536, 3, -5, 65536, 3, 65531, 65536, 3, 131067, 65536, 3, 196603, 65536, 3, 262139, 65536, 3, 327675, 65536, 3, -262148, 65536, 3, -196612, 65536, 3, -131076, 65536, 3, -65540, 65536, 3, -4, 65536, 3, 65532, 65536, 3, 131068, 65536, 3, 196604, 65536, 3, 262140, 65536, 3, 327676, 65536, 3, -262147, 65536, 3, -196611, 65536, 3, -131075, 65536, 3, -65539, 65536, 3, -3, 65536, 3, 65533, 65536, 3, 131069, 65536, 3, 196605, 65536, 3, 262141, 65536, 3, 327677, 65536, 3, -262146, 65536, 3, -196610, 65536, 3, -131074, 65536, 3, -65538, 65536, 3, -2, 65536, 3, 65534, 65536, 3, 131070, 65536, 3, 196606, 65536, 3, 262142, 65536, 3, 327678, 65536, 3, -262145, 65536, 3, -196609, 65536, 3, -131073, 65536, 3, -65537, 65536, 3, -1, 65536, 3, 65535, 65536, 3, 131071, 65536, 3, 196607, 65536, 3, 262143, 65536, 3, 327679, 65536, 3, -327680, 65536, 3, -262144, 65536, 3, -196608, 65536, 3, -131072, 65536, 3, -65536, 65536, 3, 0, 65536, 3, 65536, 65536, 3, 131072, 65536, 3, 196608, 65536, 3, 262144, 65536, 3, -327679, 65536, 3, -262143, 65536, 3, -196607, 65536, 3, -131071, 65536, 3, -65535, 65536, 3, 1, 65536, 3, 65537, 65536, 3, 131073, 65536, 3, 196609, 65536, 3, 262145, 65536, 3, -327678, 65536, 3, -262142, 65536, 3, -196606, 65536, 3, -131070, 65536, 3, -65534, 65536, 3, 2, 65536, 3, 65538, 65536, 3, 131074, 65536, 3, 196610, 65536, 3, 262146, 65536, 3, -393222, 65536, 3, -327686, 65536, 3, -262150, 65536, 3, -196614, 65536, 3, -131078, 65536, 3, -65542, 65536, 3, -6, 65536, 3, 65530, 65536, 3, 131066, 65536, 3, 196602, 65536, 3, 262138, 65536, 3, 327674, 65536, 3, 393210, 65536, 3, 458746, 65536, 3, -393221, 65536, 3, -327685, 65536, 3, 393211, 65536, 3, 458747, 65536, 3, -393220, 65536, 3, -327684, 65536, 3, 393212, 65536, 3, 458748, 65536, 3, -393219, 65536, 3, -327683, 65536, 3, 393213, 65536, 3, 458749, 65536, 3, -393218, 65536, 3, -327682, 65536, 3, 393214, 65536, 3, 458750, 65536, 3, -393217, 65536, 3, -327681, 65536, 3, 393215, 65536, 3, 458751, 65536, 3, -458752, 65536, 3, -393216, 65536, 3, 327680, 65536, 3, 393216, 65536, 3, -458751, 65536, 3, -393215, 65536, 3, 327681, 65536, 3, 393217, 65536, 3, -458750, 65536, 3, -393214, 65536, 3, 327682, 65536, 3, 393218, 65536, 3, -458749, 65536, 3, -393213, 65536, 3, -327677, 65536, 3, -262141, 65536, 3, -196605, 65536, 3, -131069, 65536, 3, -65533, 65536, 3, 3, 65536, 3, 65539, 65536, 3, 131075, 65536, 3, 196611, 65536, 3, 262147, 65536, 3, 327683, 65536, 3, 393219, 65536, 3, -458748, 65536, 3, -393212, 65536, 3, -327676, 65536, 3, -262140, 65536, 3, -196604, 65536, 3, -131068, 65536, 3, -65532, 65536, 3, 4, 65536, 3, 65540, 65536, 3, 131076, 65536, 3, 196612, 65536, 3, 262148, 65536, 3, 327684, 65536, 3, 393220, 65536, 3, -458747, 65536, 3, -393211, 65536, 3, -327675, 65536, 3, -262139, 65536, 3, -196603, 65536, 3, -131067, 65536, 3, -65531, 65536, 3, 5, 65536, 3, 65541, 65536, 3, 131077, 65536, 3, 196613, 65536, 3, 262149, 65536, 3, 327685, 65536, 3, 393221, 65536, 3, -458746, 65536, 3, -393210, 65536, 3, -327674, 65536, 3, -262138, 65536, 3, -196602, 65536, 3, -131066, 65536, 3, -65530, 65536, 3, 6, 65536, 3, 65542, 65536, 3, 131078, 65536, 3, 196614, 65536, 3, 262150, 65536, 3, 327686, 65536, 3, 393222, 65536, 3, -458745, 65536, 3, -393209, 65536, 3, -327673, 65536, 3, -262137, 65536, 3, -196601, 65536, 3, -131065, 65536, 3, -65529, 65536, 3, 7, 65536, 3, 65543, 65536, 3, 131079, 65536, 3, 196615, 65536, 3, 262151, 65536, 3, 327687, 65536, 3, 393223, 65536, 3, -458758, 0, 3, -458757, 0, 3, -458756, 0, 3, -458755, 0, 3, -458754, 0, 3, -458753, 0, 3, -524288, 0, 3, -524287, 0, 3, -524286, 0, 3, -524285, 0, 3, -524284, 0, 3, -524283, 0, 3, -524282, 0, 3, -524281, 0, 3, -458744, 0, 1342177283, -393208, 0, 1342177283, -327672, 0, 1342177283, -262136, 0, 1342177283, -196600, 0, 1342177283, -131064, 0, 1342177283, -65528, 0, 1342177283, 8, 65536, 3, 65544, 0, 1342177283, 131080, 0, 1342177283, 196616, 0, 1342177283, 262152, 0, 1342177283, 327688, 0, 1342177283, 393224, 0, 1342177283, 524282, 0, 805306371, 524283, 0, 805306371, 524284, 0, 805306371, 524285, 0, 805306371, 524286, 0, 805306371, 524287, 0, 805306371, 458752, 0, 805306371, 458753, 0, 805306371, 458754, 0, 805306371, 458755, 0, 805306371, 458756, 0, 805306371, 458757, 0, 805306371, 458758, 0, 805306371, 458759, 0, 805306371, -393223, 0, 1610612739, -327687, 0, 1610612739, -262151, 0, 1610612739, -196615, 0, 1610612739, -131079, 0, 1610612739, -65543, 0, 1610612739, -7, 0, 1610612739, 65529, 0, 1610612739, 131065, 0, 1610612739, 196601, 0, 1610612739, 262137, 0, 1610612739, 327673, 0, 1610612739, 393209, 0, 1610612739, 458745, 0, 1610612739, 458760, 0, 4, -524280, 0, 536870916, -458759, 0, 805306372, 524281, 0, 268435460, -524279, 0, 805306372, -458743, 0, 1610612739, -393207, 0, 1610612739, -327671, 0, 1610612739, -262135, 0, 1610612739, -196599, 0, 1610612739, -131063, 0, 1610612739, -65527, 0, 1610612739, 9, 65536, 3, 65545, 0, 1610612739, 131081, 0, 1610612739, 196617, 0, 1610612739, 262153, 0, 1610612739, 327689, 0, 1610612739, 393225, 0, 1610612739, 458761, 0, 268435460, -524278, 0, 3, -458742, 65536, 3, -393206, 65536, 3, -327670, 65536, 3, -262134, 65536, 3, -196598, 65536, 3, -131062, 65536, 3, -65526, 65536, 3, 10, 65536, 3, 65546, 65536, 3, 131082, 65536, 3, 196618, 65536, 3, 262154, 65536, 3, 327690, 65536, 3, 393226, 65536, 3, 458762, 0, 805306371, -524277, 0, 3, -458741, 65536, 3, -393205, 65536, 3, -327669, 65536, 3, -262133, 65536, 3, -196597, 65536, 3, -131061, 65536, 3, -65525, 65536, 3, 11, 65536, 3, 65547, 65536, 3, 131083, 65536, 3, 196619, 65536, 3, 262155, 65536, 3, 327691, 65536, 3, 393227, 65536, 3, 458763, 0, 805306371, -524276, 0, 3, -458740, 65536, 3, -393204, 65536, 3, -327668, 65536, 3, -262132, 65536, 3, -196596, 65536, 3, -131060, 65536, 3, -65524, 65536, 3, 12, 65536, 3, 65548, 65536, 3, 131084, 65536, 3, 196620, 65536, 3, 262156, 65536, 3, 327692, 65536, 3, 393228, 65536, 3, 458764, 0, 805306371, -524275, 0, 3, -458739, 65536, 3, -393203, 65536, 3, -327667, 65536, 3, -262131, 65536, 3, -196595, 65536, 3, -131059, 65536, 3, -65523, 65536, 3, 13, 65536, 3, 65549, 65536, 3, 131085, 65536, 3, 196621, 65536, 3, 262157, 65536, 3, 327693, 65536, 3, 393229, 65536, 3, 458765, 0, 805306371, -524274, 0, 3, -458738, 65536, 3, -393202, 65536, 3, -327666, 65536, 3, -262130, 65536, 3, -196594, 65536, 3, -131058, 65536, 3, -65522, 65536, 3, 14, 65536, 3, 65550, 65536, 3, 131086, 65536, 3, 196622, 65536, 3, 262158, 65536, 3, 327694, 65536, 3, 393230, 65536, 3, 458766, 0, 805306371, -524273, 0, 3, -458737, 65536, 3, -393201, 65536, 3, -327665, 65536, 3, -262129, 65536, 3, -196593, 65536, 3, -131057, 65536, 3, -65521, 65536, 3, 15, 65536, 3, 65551, 65536, 3, 131087, 65536, 3, 196623, 65536, 3, 262159, 65536, 3, 327695, 65536, 3, 393231, 65536, 3, 458767, 0, 805306371, -524272, 0, 3, -458736, 65536, 3, -393200, 65536, 3, -327664, 65536, 3, -262128, 65536, 3, -196592, 65536, 3, -131056, 65536, 3, -65520, 65536, 3, 16, 65536, 3, 65552, 65536, 3, 131088, 65536, 3, 196624, 65536, 3, 262160, 65536, 3, 327696, 65536, 3, 393232, 65536, 3, 458768, 0, 805306371, -524271, 0, 3, -458735, 65536, 3, -393199, 65536, 3, -327663, 65536, 3, -262127, 65536, 3, -196591, 65536, 3, -131055, 65536, 3, -65519, 65536, 3, 17, 65536, 3, 65553, 65536, 3, 131089, 65536, 3, 196625, 65536, 3, 262161, 65536, 3, 327697, 65536, 3, 393233, 65536, 3, 458769, 0, 805306371, -524270, 0, 3, -458734, 65536, 3, -393198, 65536, 3, -327662, 65536, 3, -262126, 65536, 3, -196590, 65536, 3, -131054, 65536, 3, -65518, 65536, 3, 18, 65536, 3, 65554, 65536, 3, 131090, 65536, 3, 196626, 65536, 3, 262162, 65536, 3, 327698, 65536, 3, 393234, 65536, 3, 458770, 0, 805306371, -524269, 0, 3, -458733, 65536, 3, -393197, 65536, 3, -327661, 65536, 3, -262125, 65536, 3, -196589, 65536, 3, -131053, 65536, 3, -65517, 65536, 3, 19, 65536, 3, 65555, 65536, 3, 131091, 65536, 3, 196627, 65536, 3, 262163, 65536, 3, 327699, 65536, 3, 393235, 65536, 3, 458771, 0, 805306371, -524268, 0, 3, -458732, 65536, 3, -393196, 65536, 3, -327660, 65536, 3, -262124, 65536, 3, -196588, 65536, 3, -131052, 65536, 3, -65516, 65536, 3, 20, 65536, 3, 65556, 65536, 3, 131092, 65536, 3, 196628, 65536, 3, 262164, 65536, 3, 327700, 65536, 3, 393236, 65536, 3, 458772, 0, 805306371, -524267, 0, 3, -458731, 65536, 3, -393195, 65536, 3, -327659, 65536, 3, -262123, 65536, 3, -196587, 65536, 3, -131051, 65536, 3, -65515, 65536, 3, 21, 65536, 3, 65557, 65536, 3, 131093, 65536, 3, 196629, 65536, 3, 262165, 65536, 3, 327701, 65536, 3, 393237, 65536, 3, 458773, 0, 805306371, -524266, 0, 3, -458730, 65536, 3, -393194, 65536, 3, -327658, 65536, 3, -262122, 65536, 3, -196586, 65536, 3, -131050, 65536, 3, -65514, 65536, 3, 22, 65536, 3, 65558, 65536, 3, 131094, 65536, 3, 196630, 65536, 3, 262166, 65536, 3, 327702, 65536, 3, 393238, 65536, 3, 458774, 0, 805306371, -524265, 0, 3, -458729, 65536, 3, -393193, 65536, 3, -327657, 65536, 3, -262121, 65536, 3, -196585, 65536, 3, -131049, 65536, 3, -65513, 65536, 3, 23, 65536, 3, 65559, 65536, 3, 131095, 65536, 3, 196631, 65536, 3, 262167, 65536, 3, 327703, 65536, 3, 393239, 65536, 3, 458775, 0, 805306371, -524264, 0, 536870916, -458728, 0, 1342177283, -393192, 0, 1342177283, -327656, 0, 1342177283, -262120, 0, 1342177283, -196584, 0, 1342177283, -131048, 0, 1342177283, -65512, 0, 1342177283, 24, 65536, 3, 65560, 0, 1342177283, 131096, 0, 1342177283, 196632, 0, 1342177283, 262168, 0, 1342177283, 327704, 0, 1342177283, 393240, 0, 1342177283, 458776, 0, 4)

[node name="CanvasLayer" type="CanvasGroup" parent="."]
position = Vector2(126, 140)

[node name="Coins" type="Area2D" parent="CanvasLayer"]
script = ExtResource("3_vvdks")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/Coins"]
shape = SubResource("RectangleShape2D_fnw0w")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Coins"]
position = Vector2(-35, 0)
texture = SubResource("AtlasTexture_2tmu7")

[node name="Timers" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 295.0
offset_top = 279.0
offset_right = 335.0
offset_bottom = 319.0

[node name="SpaceBarDecayTimer" type="Timer" parent="CanvasLayer/Timers"]
wait_time = 0.5
autostart = true

[node name="NoInputTimer" type="Timer" parent="CanvasLayer/Timers"]
wait_time = 5.0

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
metadata/_edit_use_anchors_ = true

[node name="SpaceBarProgress" type="ProgressBar" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -164.0
offset_top = 271.0
offset_right = 286.0
offset_bottom = 311.0
grow_vertical = 2
max_value = 10.0
step = 1.0
rounded = true
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="MoveCounter" type="Label" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 295.0
offset_top = 279.0
offset_right = 335.0
offset_bottom = 302.0
metadata/_edit_use_anchors_ = true

[node name="InventoryLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 243.0
offset_top = 322.0
offset_right = 283.0
offset_bottom = 345.0

[node name="Player" type="Area2D" parent="."]
collision_layer = 3
script = ExtResource("2_k1y2w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_iilue")
debug_color = Color(0.854902, 0.329412, 0.435294, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = SubResource("AtlasTexture_7i24b")
centered = false

[node name="RayCast2D" type="RayCast2D" parent="Player"]
position = Vector2(16, 16)
target_position = Vector2(0, 0)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(96, 34)
offset = Vector2(100, 100)
position_smoothing_enabled = true
script = ExtResource("3_h76xm")
